2011-02-10  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by Nate Chapin.

        Throwing in an IndexedDB error or success event should lead to the transaction aborting
        https://bugs.webkit.org/show_bug.cgi?id=54249

        * storage/indexeddb/exception-in-event-aborts-expected.txt: Added.
        * storage/indexeddb/exception-in-event-aborts.html: Added.
            tests new feature
        * storage/indexeddb/queued-commands-expected.txt:
        * storage/indexeddb/queued-commands.html:
            cleaned up (while debuggign something else)
        * storage/indexeddb/request-event-propagation-expected.txt:
        * storage/indexeddb/request-event-propagation.html:
            a few additional tests + cleanup
        * storage/indexeddb/transaction-event-propagation-expected.txt:
        * storage/indexeddb/transaction-event-propagation.html:
            a few additional tests + cleanup
2011-02-10  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Nate Chapin.

        Throwing in an IndexedDB error or success event should lead to the transaction aborting
        https://bugs.webkit.org/show_bug.cgi?id=54249

        When an exception is thrown but not handled  within an IDBRequests success/error event,
        we should abort the transaction.

        Test: storage/indexeddb/exception-in-event-aborts.html

        * bindings/js/JSEventListener.cpp:
        (WebCore::JSEventListener::handleEvent):
        * bindings/js/JSEventTarget.cpp:
        (WebCore::toJS):
        * bindings/v8/V8AbstractEventListener.cpp:
        (WebCore::V8AbstractEventListener::invokeEventHandler):
        * dom/EventTarget.cpp:
        (WebCore::EventTarget::uncaughtExceptionInEventHandler):
        * dom/EventTarget.h:
        * storage/IDBRequest.cpp:
        (WebCore::IDBRequest::uncaughtExceptionInEventHandler):
        * storage/IDBRequest.h:

Canonical link: https://commits.webkit.org/68648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78655 268f45cc-cd09-0410-ab3c-d52691b4dbfc